--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class ="grid">
-        <div class ="oragami">
+        <div class ="oragami1">
             <center>
                 <a href="http://origami.me/chameleon/"><img src="chameleon.png" width="200px" height="200px"></a>
                 <h3> Chameleon </h3>
@@ -41,7 +41,7 @@
             </p>
         </div>
 
-        <div class ="oragami">
+        <div class ="oragami2">
             <center>
                 <a href="http://origami.me/pigeon/"><img src="pigeon.png" width="200px" height="200px"></a>
                 <h3> Pigeon </h3>
